# support-copilot

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/agents/: specialist.py
app/api/: tickets.py
app/core/: config.py  logging.py  schemas.py
app/db/: connection.py
app/db/init/: 02_schema.sql  03_indexes.sql
app/kb/: acesso_2fa.md  acesso_reset_senha.md  agendamento_conflitos.md  incidentes_primeiros_passos.md  seguranca_pii.md
app/rag/: base.py  chunking.py  factory.py  faiss_retriever.py  pgvector_retriver.py  query_cache.py  retriever.py  retriver.py  types.py
app/services/: analyze_ticket.py
data/: faiss.index  kb_chunks.json
kb/: integracoes_webhoook.md
scripts/: build_faiss_index.py  ingest_kb.py  ingest_pgvector.py
